--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@
     border-style: solid;
     border-width: 10px;
 }
+
+body{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
