Add style to #settings and .buttons
Add space between size selector and buttons using #settings selector and space-between property. Add space between buttons using gap property and .buttons selector.

--- a/style.css
+++ b/style.css
@@ -19,3 +19,14 @@ body{
     flex-direction: column;
     gap: 20px;
 }
+
+#settings{
+    display: flex;
+    justify-content: space-around;
+}
+
+.buttons{
+    display: flex;
+    gap: 25px;
+    justify-content: space-between;
+}
