--- a/style.css
+++ b/style.css
@@ -35,12 +35,26 @@ button{
     font-size: large;
     font-weight: bold;
     border-width: 3px;
+    height: 30px;
     border-color: rgb(9, 163, 79);
     background-color: blanchedalmond;
 }
 
 .sizer{
     display: flex;
+    gap: 10px;
     flex-direction: column;
     align-items: center;
+}
+
+.row{
+    display: flex;
+}
+
+.cell{
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
 }
