--- a/style.css
+++ b/style.css
@@ -49,9 +49,11 @@ button{
 
 .row{
     display: flex;
+    flex: 1;
 }
 
 .cell{
+    flex: 1;
     width: 100%;
     aspect-ratio: 1/1;
     border-style: solid;
